# stt

./: .gitignore  pyproject.toml  requirements.txt  start.py
stslib/: cfg.py
