[project]
name = "stt"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.1.1",
    "flask>=3.1.1",
    "fsspec>=2025.5.1",
    "gevent>=25.5.1",
    "requests>=2.32.3",
    "torch>=2.7.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
